--- a/ops_eng_app/templates/index.html
+++ b/ops_eng_app/templates/index.html
@@ -1,12 +1,15 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
 <body>
 
-<h1>Hello Gudetama!</h1>
+<h1>Good morning!</h1>
 
-<p>I hope you're having a lovely day?</p>
+<p>I hope you're having a lovely day.</p>
 
-<img src="{{url_for('static', filename='gudetama_meh.png')}}" width="256"/>
+<img src="{{url_for('static', filename='images/govuk-opengraph-image.png')}}" width="256"/>
 
 </body>
 </html>
-
+{% endblock %}
