add config file

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -32,3 +32,27 @@
 
 {% extends 'govuk_frontend_jinja/template.html' %}
 
+
+{% block head %}
+  <meta name="description" content="{{config['SERVICE_NAME']}}">
+  <meta name="keywords" content="GOV.UK, govuk, gov, government, uk, frontend, ui, user interface, jinja, python, flask, port, template, templating, macro, component, design system, html, forms, wtf, wtforms, widget, widgets, demo, example">
+  <meta name="author" content="{{config['DEPARTMENT_NAME']}}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/govuk-frontend-4.7.0.min.css') }}" />
+{% endblock %}
+
+{% block header %}
+  {{ govukHeader({
+    'homepageUrl': url_for('index'),
+    'serviceName': config['SERVICE_NAME'],
+    'serviceUrl': url_for('index')
+  }) }}
+{% endblock %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    'tag': {
+      'text': config['SERVICE_PHASE']
+    },
+    'html': 'This is a new service – your <a class="govuk-link" href="mailto:' + 'operations-engineering@digital.justice.gov.uk' +'?subject=Feedback">feedback</a> will help us to improve it.'
+  }) }}
+{% endblock %}
