refactor to modularise layout

--- a/application/templates/pages/errors/404.html
+++ b/application/templates/pages/errors/404.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
+{% extends "components/base.html" %}
 
-{% block pageTitle %}Page not found – {{config['SERVICE_NAME']}} – GOV.UK{% endblock %}
+{% block pageTitle %}
+    Page not found – {{config['SERVICE_NAME']}} – GOV.UK (404 error)
+{% endblock %}
 
 {% set mainClasses = "govuk-main-wrapper--l" %}
 
