--- a/application/templates/pages/errors/500.html
+++ b/application/templates/pages/errors/500.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
+{% extends "components/base.html" %}
 
-{% block pageTitle %}Sorry, there is a problem with the service – {{config['SERVICE_NAME']}} – GOV.UK{% endblock %}
+{% block pageTitle %}
+    Sorry, there is a problem with the service – {{config['SERVICE_NAME']}} – GOV.UK (500 error)
+{% endblock %}
 
 {% set mainClasses = "govuk-main-wrapper--l" %}
 
