--- a/application/templates/pages/index.html
+++ b/application/templates/pages/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "components/base.html" %}
 
 {% block beforeContent %}
 {{ super() }}
@@ -9,7 +9,7 @@
   <html>
   <body>
 
-  <h1>Good afternoon!</h1>
+  <h1>Good morning!</h1>
 
   <p>I hope you're having a lovely day.</p>
 
